--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="rendor/nouislider.css">
+  <link rel="stylesheet" href="./js/vendor/nouislider.css">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <title>Кекстаграм</title>
 </head>
@@ -31,7 +31,7 @@
       <section class="img-upload">
         <div class="img-upload__wrapper">
           <h2 class="img-upload__title  visually-hidden">Загрузка фотографии</h2>
-          <form class="img-upload__form" id="upload-select-image" method="POST" action="https://29.javascript.htmlacademy.pro/kekstagram" enctype="multipart/form-data" autocomplete="off"
+          <form class="img-upload__form" id="upload-select-image" method="POST" action="https://31.javascript.htmlacademy.pro/kekstagram" enctype="multipart/form-data" autocomplete="off"
 >
 
             <!-- Изначальное состояние поля для загрузки изображения -->
